fix: repair front container so more information is readable on phone

--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -14,6 +14,9 @@
     font-size: 20px;
     margin: 0 auto;
   }
+  .more-information-container {
+    font-size: 16px;
+  }
   .nav-bar,
   .user-information {
     display: flex;
